core/compiler/tests/programs/type_err/wrong_function_arguments.loz
f :: Int Char Int -> Bool
f 1 'c' 0 = true
f _ _ _ = false

main = f 2 't' 'z'